ingress/nginx-ingress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-ingress
  labels:
    app: nginx-5
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-5
  template:
    metadata:
      name: nginx-pod
      labels:
        app: nginx-5
    spec:
      containers:
        - name: nginx-container
          image: nginx:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-in
  labels:
    app: nginx-5
spec:
  selector:
    app: nginx-5
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
