ingress/ingress-hostname-based-rules.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: host-name-based-deployment
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"   # use regular expression = true
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.venky.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service-in
                port:
                  number: 80
    - host: httpd.venky.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpd-service-in
                port:
                  number: 80
